<resources>
    <string name="app_name">DIY NFC卡面图片</string>
    <string name="text_disable">已禁用</string>
    <string name="text_enable">LSPosed已启用</string>
    <string name="confirm">确认</string>
    <string name="confirm_delete_msg">确认删除所有卡片和图片信息吗？</string>
    <string name="cancel">取消</string>
    <string name="how_to_use_msg">使用方法： 1.启用模块\n2.打开设置里的卡包找到要更换的卡，保证看到需要更换的图像\n（ColorOS在看到图片时请确认模块在后台，否则可能添加失败）\n3.回到应用下拉刷新\n4.出现目标图像后点击箭头右边的图像，点击中间的添加图片按钮以添加图片，或者选择已有的图片\n5.重新打开卡包，此时图像应已经变化\ntips：主界面往左划不需要更改的图片可以添加至黑名单</string>
    <string name="how_to_use_title">使用说明</string>
    <string name="card_url_title">卡片网址</string>
    <string name="input_image_name_title">选择图片或输入url</string>
    <string name="input_image_input_hint">图片URL</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings_title_settings">设置</string>
    <string name="settings_title_about">关于</string>
    <string name="settings_title_show_all_cards">显示所有卡片</string>
    <string name="settings_summary_show_all_cards_on">现在不过滤小卡片和logo</string>
    <string name="settings_summary_show_all_cards_off">现在会过滤小卡片和logo</string>
    <string name="settings_title_custom_hook">自定义hook点（仅供测试使用，不懂勿动）</string>
    <string name="settings_about_msg">DIY NFC Card v%s，code by AI丿质子\n感谢2255提供ColorOS测试机</string>
    <string name="settings_title_join_qq">加入作者的QQ群</string>
    <string name="settings_title_debug">输出log</string>
    <string name="settings_summary_debug">仅供debug使用</string>
    <string name="dialog_button_copy">复制</string>
    <string name="input_image_button_clear">清空已选</string>
    <string name="input_image_button_tips_title">说明</string>
    <string name="settings_title_hide_icon">隐藏桌面图标</string>
    <string name="settings_summary_hide_icon">开启后，会隐藏桌面上本应用的图标</string>
    <string name="settings_hide_icon_dialog_title">确定隐藏图标吗？</string>
    <string name="settings_hide_icon_dialog_text">开启隐藏图标后，桌面上本应用的图标将会消失！\n此后只可通过lsposed内，长按本应用，选择模块设置，来打开本应用。\n您可随时关闭此选项来重新显示图标。</string>
    <string name="settings_title_donate">给开发者买咖啡</string>
    <string name="settings_title_no_money_plan">无钱计划</string>
    <string name="donate_call_alipay_text">直接打开支付宝去捐赠</string>
    <string name="settings_no_money_dialog_text">本应用已加入 无钱计划，承诺一直免费使用且无收费附加功能。</string>
    <string name="settings_dialog_button_text_no_money_link">打开无钱计划网址</string>
    <string name="settings_open_qq_fail">打开QQ失败，请检查手机是否有安装最新版QQ</string>
    <string name="input_image_tips_text">点击图片来选择，点击下面的添加图片按钮来添加图片（需要root权限），长按图片来删除图片，点击“清空已选”来还原原图</string>
    <string name="input_image_dialog_confirm_root_title">请授予root权限</string>
    <string name="input_image_dialog_confirm_root_msg">应用需要root权限才能添加图片（复制图片到应用私有目录），请授予root权限。</string>
    <string name="save_filename_dialog_edittext_hint">保存文件名（不包括后缀名，不建议使用非英文字符）</string>
    <string name="save_filename_dialog_title">保存文件名</string>
    <string name="save_toast_file_exists">要保存的文件名已存在，请更换名字</string>
    <string name="diy_card_toast_image_resolution_small">图片分辨率过小，最终图片效果可能不好</string>
    <string name="select_image_button_start_diy">裁剪至标准大小并可选添加卡面标志</string>
    <string name="select_image_button_save">确定添加</string>
    <string name="select_image_save_copy_error_toast">复制文件失败，请确定授予root权限后联系开发者</string>
    <string name="select_image_tips">点击确认添加会添加当前预览的图片样式到应用卡包图片库。\n目前一键添加卡面标志功能仅支持京津冀互联互通卡、上海公共交通卡 交通联合版、泉城通、银川交通一卡通。\n因作者技术和精力有限，不会提供所有交通卡卡面和其它卡卡面。\n如您有能力，可自行取出想要的卡面标志图片交给作者，作者会添加到应用。</string>
    <string name="select_image_button_tips">相关说明</string>
    <string name="settings_clear_cache_dialog_title">是否清除模块图片缓存？</string>
    <string name="settings_clear_cache_dialog_text">是否确认清除自己的图片缓存？\n清除后可能会修正图片加载错误。\n清除后请重启本应用以生效。</string>
    <string name="select_image_done_dialog_title">添加图片完成</string>
    <string name="select_image_done_dialog_text">添加图片完成！\n若卡包卡片卡面显示错误，可能是因为您输入了与之前相同的文件名，到设置清理缓存即可更新。</string>
    <string name="select_image_done_dialog_clear_cache">马上清除缓存</string>
    <string name="activity_title_add_image">添加图片</string>
    <string name="no_card_app_installed_content">未检测到您的系统安装了小米智能卡或ColorOS卡包，请检查是否存在目标应用或已给予权限</string>
    <string name="no_card_app_installed_title">未找到适配的卡包APP</string>
    <string name="clear_card_cache_succ">清除缓存成功</string>
    <string name="clear_card_cache_fail">清除缓存失败</string>
    <string name="settings_title_clear_card_cache">清除模块图片缓存</string>
    <string name="settings_title_blacklist">主界面卡面黑名单</string>
    <string name="settings_summary_blacklist">编辑不显示在主界面的卡面名单</string>
    <string name="activity_title_black_list">主界面卡面黑名单</string>
    <string name="description">修改HyperOS和ColorOS卡包卡面图片</string>
    <string name="settings_title_FAQ">常见问题</string>
    <string name="settings_FAQ_msg">常见问题：\n模块主界面没有图片：请确认LSP里模块已启用并勾选作用域，强行停止卡包，在卡包里加载完图片\n替换了图片但不生效：如上若仍不生效请确认/data/data/卡包包名/files/images下存在选择的图片文件\n更改了替换图片但仍显示旧图片：设置里清除卡面图片缓存\n更新模块后：请强行停止卡包后再重启卡包和应用\n若确认模块是最新版，已重启卡包和应用仍有故障：请加群反馈</string>
    <string name="settings_title_clear_hook_cache">清除hook点缓存</string>
    <string name="settings_clear_hook_cache_dialog_title">是否清除hook点缓存？</string>
    <string name="settings_clear_hook_cache_dialog_text">是否清除hook点缓存？\n清除后可能解决加载不到目标图片的问题。\n清除后会自动停止运行卡包。</string>
</resources>